--- a/styles.css
+++ b/styles.css
@@ -196,11 +196,22 @@ textarea {
   outline: none;
   color: var(--foreground);
   line-height: 1.5;
+  cursor: text;
+  user-select: text;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
 }
 
 textarea:focus {
   border-color: var(--primary);
   box-shadow: 0 0 0 3px rgba(35, 58, 221, 0.1);
+  cursor: text;
+}
+
+textarea:not(:disabled):not([readonly]) {
+  cursor: text;
+  pointer-events: auto;
 }
 
 iframe {
